--- a/README
+++ b/README
@@ -22,4 +22,4 @@ How To Remove?
 Credits
 -------
 Built as part of course work
-Thanks to rakeshnair.india@gmail.com for adding parameter passing code, testing and bug fixes. 
+Thanks to rakeshrnair.india@gmail.com for adding parameter passing code, testing and bug fixes. 
